--- a/PROYECTOS/03-pdf-script/package.json
+++ b/PROYECTOS/03-pdf-script/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "makro": "node src/modules/makro/code/makro.js",
+    "hotel": "node src/modules/hotel/code/hotel.js",
+    "croissant": "node src/modules/croissant/code/croissant.js"
   },
   "keywords": [],
   "author": "",
