--- a/PROYECTOS/04-ts-pdf-script/tsconfig.json
+++ b/PROYECTOS/04-ts-pdf-script/tsconfig.json
@@ -1,22 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2020",                    
-    "module": "ES2020",                    
-    "moduleResolution": "node",    
-    "outDir": "./dist",              
-    "rootDir": "./src",              
-    "strict": true,                      
-    "esModuleInterop": true,           
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true              
+    "declaration": true,
+    "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
-
-//! important
-// If you're using "module": "ES2020" and "type": "module", the .js extensions must be included in 
-// your import paths, because Node.js (and the ESM runtime) requires them. Even though the source 
-// files are .ts, the compiled output will be .js.
-
-//* import { crearCsv } from "../../utils/createCsv.js";
