--- a/PROYECTOS/04-ts-pdf-script/package.json
+++ b/PROYECTOS/04-ts-pdf-script/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "makro": "node ./dist/supplier/makro.js"
+    "makro": "node ./dist/supplier/makro.js",
+    "mercadona": "node ./dist/supplier/mercadona.js"
   },
   "keywords": [],
   "author": "",
