--- a/PROYECTOS/04-ts-pdf-script/package.json
+++ b/PROYECTOS/04-ts-pdf-script/package.json
@@ -6,7 +6,8 @@
     "build": "tsc",
     "start": "node ./dist/index.js",
     "makro": "node ./dist/supplier/makro.js",
-    "mercadona": "node ./dist/supplier/mercadona.js"
+    "mercadona": "node ./dist/supplier/mercadona.js",
+    "europastry": "node ./dist/supplier/europastry.js"
   },
   "keywords": [],
   "author": "",
